# event-bus

./: .dockerignore  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md
.devcontainer/: Dockerfile
include/ConsumerSimulator/: TestConsumerSimulator.h
include/Event/: Event.h  SensorEvent.h
include/EventBus/: EventBus.h
include/SensorSimulator/: GasSensorSimulator.h  GenericSimulator.h  ISensorSimulator.h  PressureSensorSimulator.h  SimulatorManager.h  TemperatureSensorSimulator.h
include/Util/: RandomNumberGenerator.h
src/: main.cpp
src/ConsumerSimulator/: TestConsumerSimulator.cpp
src/Event/: SensorEvent.cpp
src/EventBus/: EventBus.cpp
src/SensorSimulator/: GasSensorSimulator.cpp  PressureSensorSimulator.cpp  SimulatorManager.cpp  TemperatureSensorSimulator.cpp
tests/: CMakeLists.txt  tests_eventBus.cpp  tests_genericSimulator.cpp  tests_main.cpp  tests_randomNumberGenerator.cpp  tests_sensorEvent.cpp  tests_simulatorManager.cpp  tests_testConsumerSimulator.cpp
